enable and add media queries

--- a/styles/style.css
+++ b/styles/style.css
@@ -134,7 +134,7 @@ footer {
     padding-top: 0%;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
 
     .mountainWrapper {
         display: none;
@@ -170,6 +170,13 @@ footer {
 .ink {
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 600px) {
+
+    .landing {
+        margin: auto;
+    }
 }
 
 /* class specific to about.html */
@@ -235,6 +242,13 @@ footer {
     font-weight: bold;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media (max-width: 600px) {
+    .cardContainer {
+        flex-direction: column;
+        width: 80%;
+    }
 }
 
 /* class specific to experience.html */
